Wed May 28 16:53:39 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Call rb_ary_modify_check() at the
	  beginning. [rubyspec]

Wed May 28 16:12:44 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/webrick/httpservlet/cgihandler.rb (WEBrick::HTTPServlet::CGIHandler#do_GET):
	  Set the HTTP status code to 302 if a Location header field is
	  present and the status code is not valid as a client
	  redirection.  cf. RFC 3875 6.2.3, 6.2.4.

Wed May 28 15:18:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/singleton.rb (SingletonClassMethods): _load should be public.

Wed May 28 12:52:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, marshal_dump, r_object0, marshal_load): search
	  private methods too.  [ruby-dev:34671]

	* object.c (convert_type): ditto.

Tue May 27 23:26:49 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (rb_bug): description from rb_bug() should include
	  patchlevel.  [ruby-dev:34826]

Tue May 27 20:19:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Return an empty array instead of
	  nil when pos is valid and len is adjusted from a valid value to
	  zero; caught by RubySpec.

Tue May 27 19:45:20 2008  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (flo_divmod): Revert the behavior change; do not
	  suppress an exception when div is NaN or Inf. [ruby-dev:34857]

Tue May 27 19:24:40 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_to_a): Pass arguments through to #each().
	  (enum_sort): Follow the enum_to_a signature change.
	  (enum_reverse_each): Add #reverse_each().

Tue May 27 18:54:02 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (strio_each_char, Init_stringio): Add
	  StringIO#{each_char,chars}.

Tue May 27 17:59:34 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (strio_each): Return an enumerator if no
	  block is given.
	  (strio_each_byte): Return an enumerator if no block is given,